# guile-hoot

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  README.md  README.org  ci-manifest.scm  compile.scm  configure.ac  ffi.scm  guix.scm  hoot.ase  js-test.in  manifest.scm  pre-inst-env.in  reflect.js  reflect.wasm  reflect.wat  size-metrics.scm  upload-ci-image
design/: ABI.md  log.md
doc/: apache-2.0.texi  build-html.scm  hoot.css  hoot.texi
examples/: Makefile  README.md  basic-types-binaryen.wasm  basic-types-hoot.wasm  basic-types.gwat  basic-types.js  basic-types.wat  hof.gwat  manifest.scm  test-lib.js  test.js  trivial-1.wat
js-runtime/: reflect.gwat  reflect.js  reflect.wat  wtf8.wat
meta-repl/: boot.js  build.scm  index.html  js-runtime  repl.css  repl.scm  web-server.scm
module/: Makefile.am
module/hoot/: compile.scm  config.scm.in  generate-char-prelude.scm  inline-wasm.scm  prelude.scm  primitives.scm  reflect.scm  repl.scm  stdlib.scm  unify-returns.scm
module/language/cps/: hoot.scm
module/language/cps/hoot/: lower-primcalls.scm  tailify.scm  unify-returns.scm
module/scripts/: assemble-wasm.scm  compile-wasm.scm
module/wasm/: assemble.scm  assembler.scm  canonical-types.scm  disassemble.scm  dump.scm  link.scm  lower-globals.scm  lower-stringrefs.scm  lower.scm  parse.scm  resolve.scm  stack.scm  symbolify.scm  types.scm  vm.scm  wat.scm
test/: Makefile  basic-types.wasm  load-wasm-and-print-primitive.js  load-wasm-and-print.js  reflect.js  reflect.wasm  test-assignment.scm  test-atomics.scm  test-bitwise.scm  test-bytevectors.scm  test-call.js  test-char-prelude.scm  test-complex.scm  test-constants.scm  test-disassemble.scm  test-exceptions.scm  test-ffi.scm  test-flonums.scm  test-fluids.scm  test-fractions.scm  test-hash-tables.scm  test-inline-wasm.scm  test-ints.scm  test-keywords.scm  test-lower-globals.scm  test-lower-stringrefs.scm  test-lower.scm  test-number-to-string.scm  test-numeric.scm  test-pairs.scm  test-ports.scm  test-procedures.scm  test-promises.scm  test-prompts.scm  test-read.scm  test-records.scm  test-round-trip.scm  test-string-to-number.scm  test-strings.scm  test-symbols.scm  (+5 more)
